--- a/tests/testcases/parser/try_statement/catch_arg/optional_catch_binding_supported_from_ES9_upward/gen/tryx002fcatch_parenless_array/9.md
+++ b/tests/testcases/parser/try_statement/catch_arg/optional_catch_binding_supported_from_ES9_upward/gen/tryx002fcatch_parenless_array/9.md
@@ -28,7 +28,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Parser error!
-  Next ord should be 123 (`{`) but was 91 (curc: `[`, token: `[`)
+  Next ord should be 40 (`(`) but was 91 (curc: `[`, token: `[`)
 
 try {} catch [] {}
              ^------- error
