--- a/tests/testcases/parser/functions/declaration/block_scoped/gen/var_func/function_x002afx0028x0029x007bx007d.md
+++ b/tests/testcases/parser/functions/declaration/block_scoped/gen/var_func/function_x002afx0028x0029x007bx007d.md
@@ -50,56 +50,4 @@ _Output same as sloppy mode._
 
 Parsed in sloppy script mode but with the web compat flag enabled.
 
-`````
-ast: {
-  type: 'Program',
-  loc:{start:{line:1,col:0},end:{line:1,col:25},source:''},
-  body: [
-    {
-      type: 'BlockStatement',
-      loc:{start:{line:1,col:0},end:{line:1,col:25},source:''},
-      body: [
-        {
-          type: 'FunctionDeclaration',
-          loc:{start:{line:1,col:2},end:{line:1,col:18},source:''},
-          generator: true,
-          async: false,
-          id: {
-            type: 'Identifier',
-            loc:{start:{line:1,col:12},end:{line:1,col:12},source:''},
-            name: 'f'
-          },
-          params: [],
-          body: {
-            type: 'BlockStatement',
-            loc:{start:{line:1,col:15},end:{line:1,col:18},source:''},
-            body: []
-          }
-        },
-        {
-          type: 'VariableDeclaration',
-          loc:{start:{line:1,col:22},end:{line:1,col:24},source:''},
-          kind: 'var',
-          declarations: [
-            {
-              type: 'VariableDeclarator',
-              loc:{start:{line:1,col:22},end:{line:1,col:24},source:''},
-              id: {
-                type: 'Identifier',
-                loc:{start:{line:1,col:22},end:{line:1,col:22},source:''},
-                name: 'f'
-              },
-              init: null
-            }
-          ]
-        }
-      ]
-    }
-  ]
-}
-
-tokens (13x):
-       PUNCTUATOR IDENT PUNCTUATOR IDENT PUNCTUATOR PUNCTUATOR
-       PUNCTUATOR PUNCTUATOR IDENT IDENT ASI PUNCTUATOR
-`````
-
+_Output same as sloppy mode._
