Fix crazy town around `let` decl vs expression and ASI

--- a/tests/testcases/parser/tests_related_to_bindings/export/in_a_single_export/let_x_x007bx002ex002ex002exx007d.md
+++ b/tests/testcases/parser/tests_related_to_bindings/export/in_a_single_export/let_x_x007bx002ex002ex002exx007d.md
@@ -56,7 +56,7 @@ Parsed with the module goal.
 
 `````
 throws: Parser error!
-  Found a lexical binding that is duplicate of a lexical binding on the same statement level
+  Attempted to create a lexical binding for `x` but another binding already existed on the same level
 
 export let x = y, {...x} = y;
                        ^------- error
