--- a/tests/testcases/parser/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/end_of_input_u-flag/x002a.md
+++ b/tests/testcases/parser/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/end_of_input_u-flag/x002a.md
@@ -28,7 +28,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex `Assertion` "atoms" can not be quantified but this `$` was quantified anyways (by a `*`)
+    Regex `A-ssertion` "atoms" can not be quantified but this `$` was quantified anyways (by a `*`)
 
 /foo$*/u
 ^------- error
