Emit all tokenizer errors if there were any. Fix \B edge case

--- a/tests/testcases/parser/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/end_of_input_u-flag/x007b5_x007dx003f.md
+++ b/tests/testcases/parser/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/end_of_input_u-flag/x007b5_x007dx003f.md
@@ -50,4 +50,11 @@ _Output same as sloppy mode._
 
 Parsed in sloppy script mode but with the web compat flag enabled.
 
-_Output same as sloppy mode._
+`````
+throws: Tokenizer error!
+    Regex `A-ssertion` "atoms" can not be quantified but this `$` was quantified anyways (by a `{`); Encountered illegal curly quantifier without anything to quantify. This is `InvalidBracedQuantifier` and explicitly a syntax error
+
+/foo${5,}?/u
+^------- error
+`````
+
