Do not accept regex curly quantifiers that omit the lower bound

--- a/tests/testcases/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/start_of_input_u-flag/x007bax007dx003f.md
+++ b/tests/testcases/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/start_of_input_u-flag/x007bax007dx003f.md
@@ -52,7 +52,7 @@ Parsed in sloppy script mode but with the web compat flag enabled.
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered illegal curly quantifier without anything to quantify. This is `InvalidBracedQuantifier` and explicitly a syntax error; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
+    Regex: Found invalid regex curly quantifier; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
 
 /^{a}?foo/u
 ^------- error
