--- a/tests/testcases/lexer_cases/regexesn/range_quantifier/18.1.md
+++ b/tests/testcases/lexer_cases/regexesn/range_quantifier/18.1.md
@@ -1,19 +1,17 @@
 # ZeParser parser test case
 
-- Path: tests/testcases/lexer_cases/regexesn/range_quantifier/29.md
+- Path: tests/testcases/lexer_cases/regexesn/range_quantifier/18.1.md
 
 > :: lexer cases : regexesn : range quantifier
 >
-> ::> 29
+> ::> 18.1
 >
 > Imported lexer test
->
-> no spaces allowed in quantifier
 
 ## Input
 
 `````js
-/a{ 1 , 1 }/
+/a{,1}/
 `````
 
 ## Output
@@ -30,9 +28,9 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Found invalid regex curly quantifier
+    Regex: The first digit of a regex curly quantifier is mandatory
 
-/a{ 1 , 1 }/
+/a{,1}/
 ^------- error
 `````
 
@@ -55,17 +53,17 @@ Parsed in sloppy script mode but with the web compat flag enabled.
 `````
 ast: {
   type: 'Program',
-  loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
+  loc:{start:{line:1,column:0},end:{line:1,column:7},source:''},
   body: [
     {
       type: 'ExpressionStatement',
-      loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
+      loc:{start:{line:1,column:0},end:{line:1,column:7},source:''},
       expression: {
         type: 'Literal',
-        loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
+        loc:{start:{line:1,column:0},end:{line:1,column:7},source:''},
         value: null,
-        regex: { pattern: 'a{ 1 , 1 }', flags: '' },
-        raw: '/a{ 1 , 1 }/'
+        regex: { pattern: 'a{,1}', flags: '' },
+        raw: '/a{,1}/'
       }
     }
   ]
