--- a/tests/testcases/lexer_cases/regexesn/range_quantifier/28.md
+++ b/tests/testcases/lexer_cases/regexesn/range_quantifier/28.md
@@ -30,7 +30,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered unescaped closing curly `}` while not parsing a quantifier
+    Regex: Found invalid regex curly quantifier
 
 /a{ 1, 1 }/
 ^------- error
