--- a/tests/testcases/lexer_cases/regexesu/range_quantifier/19.7.md
+++ b/tests/testcases/lexer_cases/regexesu/range_quantifier/19.7.md
@@ -1,19 +1,19 @@
 # ZeParser parser test case
 
-- Path: tests/testcases/lexer_cases/regexesn/range_quantifier/29.md
+- Path: tests/testcases/lexer_cases/regexesu/range_quantifier/19.7.md
 
-> :: lexer cases : regexesn : range quantifier
+> :: lexer cases : regexesu : range quantifier
 >
-> ::> 29
+> ::> 19.7
 >
 > Imported lexer test
->
-> no spaces allowed in quantifier
+
+## FAIL
 
 ## Input
 
 `````js
-/a{ 1 , 1 }/
+/a{,72}/u
 `````
 
 ## Output
@@ -30,9 +30,9 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Found invalid regex curly quantifier
+    Regex: The first digit of a regex curly quantifier is mandatory
 
-/a{ 1 , 1 }/
+/a{,72}/u
 ^------- error
 `````
 
@@ -53,25 +53,10 @@ _Output same as sloppy mode._
 Parsed in sloppy script mode but with the web compat flag enabled.
 
 `````
-ast: {
-  type: 'Program',
-  loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
-  body: [
-    {
-      type: 'ExpressionStatement',
-      loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
-      expression: {
-        type: 'Literal',
-        loc:{start:{line:1,column:0},end:{line:1,column:12},source:''},
-        value: null,
-        regex: { pattern: 'a{ 1 , 1 }', flags: '' },
-        raw: '/a{ 1 , 1 }/'
-      }
-    }
-  ]
-}
+throws: Tokenizer error!
+    Regex: The first digit of a regex curly quantifier is mandatory; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
 
-tokens (3x):
-       REGEX ASI
+/a{,72}/u
+^------- error
 `````
 
