--- a/tests/testcases/lexer_cases/regexesu/range_quantifier/25.md
+++ b/tests/testcases/lexer_cases/regexesu/range_quantifier/25.md
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered unescaped closing curly `}` while not parsing a quantifier
+    Regex: Found invalid regex curly quantifier
 
 /a{ 1 , 1}/u
 ^------- error
@@ -56,7 +56,7 @@ Parsed in sloppy script mode but with the web compat flag enabled.
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered unescaped closing curly `}` while not parsing a quantifier; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
+    Regex: Found invalid regex curly quantifier; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
 
 /a{ 1 , 1}/u
 ^------- error
