--- a/tests/testcases/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/named_capturing_group_is_not_an_assert/x007bx003f.md
+++ b/tests/testcases/regexes/assertions_have_no_quantifier_unless_web_and_sans_u/gen/named_capturing_group_is_not_an_assert/x007bx003f.md
@@ -28,7 +28,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered unescaped closing curly `}` while not parsing a quantifier
+    Regex: Found invalid regex curly quantifier
 
 /(?<name>x){?/u
 ^------- error
@@ -52,7 +52,7 @@ Parsed in sloppy script mode but with the web compat flag enabled.
 
 `````
 throws: Tokenizer error!
-    Regex: Encountered unescaped closing curly `}` while not parsing a quantifier; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
+    Regex: Found invalid regex curly quantifier; Regex body had an escape or char class range that is invalid with a u-flag, but it did have a u-flag
 
 /(?<name>x){?/u
 ^------- error
