--- a/tests/testcases/lexer_cases/regexesu/charclass_range_tests/22.pass.md
+++ b/tests/testcases/lexer_cases/regexesu/charclass_range_tests/22.pass.md
@@ -23,8 +23,6 @@
 ;
 /[\x01-\x17]/u
 ;
-/[A-\cH]/u
-;
 /[\cH-Z]/u
 `````
 
@@ -43,7 +41,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 `````
 ast: {
   type: 'Program',
-  loc:{start:{line:1,column:0},end:{line:11,column:10},source:''},
+  loc:{start:{line:1,column:0},end:{line:9,column:10},source:''},
   body: [
     {
       type: 'ExpressionStatement',
@@ -91,21 +89,10 @@ ast: {
     },
     {
       type: 'ExpressionStatement',
-      loc:{start:{line:9,column:0},end:{line:10,column:1},source:''},
+      loc:{start:{line:9,column:0},end:{line:9,column:10},source:''},
       expression: {
         type: 'Literal',
         loc:{start:{line:9,column:0},end:{line:9,column:10},source:''},
-        value: null,
-        regex: { pattern: '[A-\\cH]', flags: 'u' },
-        raw: '/[A-\\cH]/u'
-      }
-    },
-    {
-      type: 'ExpressionStatement',
-      loc:{start:{line:11,column:0},end:{line:11,column:10},source:''},
-      expression: {
-        type: 'Literal',
-        loc:{start:{line:11,column:0},end:{line:11,column:10},source:''},
         value: null,
         regex: { pattern: '[\\cH-Z]', flags: 'u' },
         raw: '/[\\cH-Z]/u'
@@ -114,9 +101,9 @@ ast: {
   ]
 }
 
-tokens (13x):
+tokens (11x):
        REGEXU PUNCTUATOR REGEXU PUNCTUATOR REGEXU PUNCTUATOR REGEXU
-       PUNCTUATOR REGEXU PUNCTUATOR REGEXU ASI
+       PUNCTUATOR REGEXU ASI
 `````
 
 ### Strict mode
