Make all non-printable ascii chars encoded in tests

--- a/tests/testcases/lexer_cases/strings_double/octal_escapes/105.md
+++ b/tests/testcases/lexer_cases/strings_double/octal_escapes/105.md
@@ -70,7 +70,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:1,column:0},end:{line:1,column:6},source:''},
-        value: 'Â',
+        value: '@{xc2}@',
         raw: '"\\302"'
       },
       directive: '\\302'
