--- a/tests/testcases/lexer_cases/strings_single/line_continuation/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_single/line_continuation/1.pass.md
@@ -27,13 +27,13 @@ post'
 'pre\
 post'
 ;
-'\'
+'\@{xd}@'
 ;
-'pre\'
+'pre\@{xd}@'
 ;
-'\post'
+'\@{xd}@post'
 ;
-'pre\post'
+'pre\@{xd}@post'
 `````
 
 ## Output
