--- a/tests/testcases/lexer_cases/strings_template_body/hex_escapes/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_body/hex_escapes/1.pass.md
@@ -298,7 +298,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:9},end:{line:11,column:13},source:''},
             tail: false,
-            value: { raw: '\\x9a', cooked: '' }
+            value: { raw: '\\x9a', cooked: '@{x9a}@' }
           },
           {
             type: 'TemplateElement',
@@ -340,7 +340,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:13,column:9},end:{line:13,column:13},source:''},
             tail: false,
-            value: { raw: '\\xAb', cooked: '«' }
+            value: { raw: '\\xAb', cooked: '@{xab}@' }
           },
           {
             type: 'TemplateElement',
@@ -382,7 +382,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:15,column:9},end:{line:15,column:13},source:''},
             tail: false,
-            value: { raw: '\\xBc', cooked: '¼' }
+            value: { raw: '\\xBc', cooked: '@{xbc}@' }
           },
           {
             type: 'TemplateElement',
@@ -424,7 +424,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:17,column:9},end:{line:17,column:13},source:''},
             tail: false,
-            value: { raw: '\\xCd', cooked: 'Í' }
+            value: { raw: '\\xCd', cooked: '@{xcd}@' }
           },
           {
             type: 'TemplateElement',
@@ -466,7 +466,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:19,column:9},end:{line:19,column:13},source:''},
             tail: false,
-            value: { raw: '\\xDe', cooked: 'Þ' }
+            value: { raw: '\\xDe', cooked: '@{xde}@' }
           },
           {
             type: 'TemplateElement',
@@ -508,7 +508,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:21,column:9},end:{line:21,column:13},source:''},
             tail: false,
-            value: { raw: '\\xEf', cooked: 'ï' }
+            value: { raw: '\\xEf', cooked: '@{xef}@' }
           },
           {
             type: 'TemplateElement',
@@ -550,7 +550,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:23,column:9},end:{line:23,column:13},source:''},
             tail: false,
-            value: { raw: '\\xF0', cooked: 'ð' }
+            value: { raw: '\\xF0', cooked: '@{xf0}@' }
           },
           {
             type: 'TemplateElement',
