--- a/tests/testcases/lexer_cases/strings_template_body/hex_escapes/2.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_body/hex_escapes/2.pass.md
@@ -28,7 +28,7 @@
 `${"-->"}\x9a\
 ${"<--"}`
 ;
-`${"-->"}\xAb	${"<--"}`
+`${"-->"}\xAb@{x9}@${"<--"}`
 ;
 `${"-->"}\xBc ${"<--"}`
 ;
@@ -299,7 +299,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:9},end:{line:12,column:0},source:''},
             tail: false,
-            value: { raw: '\\x9a\\\n', cooked: '' }
+            value: { raw: '\\x9a\\\n', cooked: '@{x9a}@' }
           },
           {
             type: 'TemplateElement',
@@ -341,7 +341,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:14,column:9},end:{line:14,column:14},source:''},
             tail: false,
-            value: { raw: '\\xAb\t', cooked: '«\t' }
+            value: { raw: '\\xAb\t', cooked: '@{xab}@\t' }
           },
           {
             type: 'TemplateElement',
@@ -383,7 +383,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:16,column:9},end:{line:16,column:14},source:''},
             tail: false,
-            value: { raw: '\\xBc ', cooked: '¼ ' }
+            value: { raw: '\\xBc ', cooked: '@{xbc}@ ' }
           },
           {
             type: 'TemplateElement',
@@ -425,7 +425,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:18,column:9},end:{line:18,column:14},source:''},
             tail: false,
-            value: { raw: '\\xCd#', cooked: 'Í#' }
+            value: { raw: '\\xCd#', cooked: '@{xcd}@#' }
           },
           {
             type: 'TemplateElement',
@@ -467,7 +467,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:20,column:9},end:{line:20,column:17},source:''},
             tail: false,
-            value: { raw: '\\xDe\\x00', cooked: 'Þ\u0000' }
+            value: { raw: '\\xDe\\x00', cooked: '@{xde}@\u0000' }
           },
           {
             type: 'TemplateElement',
@@ -509,7 +509,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:22,column:9},end:{line:22,column:15},source:''},
             tail: false,
-            value: { raw: '\\xEfok', cooked: 'ïok' }
+            value: { raw: '\\xEfok', cooked: '@{xef}@ok' }
           },
           {
             type: 'TemplateElement',
@@ -551,7 +551,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:24,column:9},end:{line:24,column:16},source:''},
             tail: false,
-            value: { raw: 'pre\\xF0', cooked: 'preð' }
+            value: { raw: 'pre\\xF0', cooked: 'pre@{xf0}@' }
           },
           {
             type: 'TemplateElement',
