--- a/tests/testcases/lexer_cases/strings_template_head/hex_escapes/2.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_head/hex_escapes/2.pass.md
@@ -28,7 +28,7 @@
 `\x9a\
 ${"<--"}`
 ;
-`\xAb	${"<--"}`
+`\xAb@{x9}@${"<--"}`
 ;
 `\xBc ${"<--"}`
 ;
@@ -227,7 +227,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:1},end:{line:12,column:0},source:''},
             tail: false,
-            value: { raw: '\\x9a\\\n', cooked: '' }
+            value: { raw: '\\x9a\\\n', cooked: '@{x9a}@' }
           },
           {
             type: 'TemplateElement',
@@ -257,7 +257,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:14,column:1},end:{line:14,column:6},source:''},
             tail: false,
-            value: { raw: '\\xAb\t', cooked: '«\t' }
+            value: { raw: '\\xAb\t', cooked: '@{xab}@\t' }
           },
           {
             type: 'TemplateElement',
@@ -287,7 +287,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:16,column:1},end:{line:16,column:6},source:''},
             tail: false,
-            value: { raw: '\\xBc ', cooked: '¼ ' }
+            value: { raw: '\\xBc ', cooked: '@{xbc}@ ' }
           },
           {
             type: 'TemplateElement',
@@ -317,7 +317,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:18,column:1},end:{line:18,column:6},source:''},
             tail: false,
-            value: { raw: '\\xCd#', cooked: 'Í#' }
+            value: { raw: '\\xCd#', cooked: '@{xcd}@#' }
           },
           {
             type: 'TemplateElement',
@@ -347,7 +347,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:20,column:1},end:{line:20,column:9},source:''},
             tail: false,
-            value: { raw: '\\xDe\\x00', cooked: 'Þ\u0000' }
+            value: { raw: '\\xDe\\x00', cooked: '@{xde}@\u0000' }
           },
           {
             type: 'TemplateElement',
@@ -377,7 +377,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:22,column:1},end:{line:22,column:7},source:''},
             tail: false,
-            value: { raw: '\\xEfok', cooked: 'ïok' }
+            value: { raw: '\\xEfok', cooked: '@{xef}@ok' }
           },
           {
             type: 'TemplateElement',
@@ -407,7 +407,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:24,column:1},end:{line:24,column:8},source:''},
             tail: false,
-            value: { raw: 'pre\\xF0', cooked: 'preð' }
+            value: { raw: 'pre\\xF0', cooked: 'pre@{xf0}@' }
           },
           {
             type: 'TemplateElement',
