--- a/tests/testcases/lexer_cases/strings_double/hex_escapes/2.pass.md
+++ b/tests/testcases/lexer_cases/strings_double/hex_escapes/2.pass.md
@@ -28,7 +28,7 @@
 "\x9a\
 "
 ;
-"\xAb	"
+"\xAb@{x9}@"
 ;
 "\xBc "
 ;
@@ -119,7 +119,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:11,column:0},end:{line:12,column:1},source:''},
-        value: '',
+        value: '@{x9a}@',
         raw: '"\\x9a\\\n"'
       },
       directive: '\\x9a\\\n'
@@ -130,7 +130,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:14,column:0},end:{line:14,column:7},source:''},
-        value: '«\t',
+        value: '@{xab}@\t',
         raw: '"\\xAb\t"'
       },
       directive: '\\xAb\t'
@@ -141,7 +141,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:16,column:0},end:{line:16,column:7},source:''},
-        value: '¼ ',
+        value: '@{xbc}@ ',
         raw: '"\\xBc "'
       },
       directive: '\\xBc '
@@ -152,7 +152,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:18,column:0},end:{line:18,column:7},source:''},
-        value: 'Í#',
+        value: '@{xcd}@#',
         raw: '"\\xCd#"'
       },
       directive: '\\xCd#'
@@ -163,7 +163,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:20,column:0},end:{line:20,column:10},source:''},
-        value: 'Þ\u0000',
+        value: '@{xde}@\u0000',
         raw: '"\\xDe\\x00"'
       },
       directive: '\\xDe\\x00'
@@ -174,7 +174,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:22,column:0},end:{line:22,column:8},source:''},
-        value: 'ïok',
+        value: '@{xef}@ok',
         raw: '"\\xEfok"'
       },
       directive: '\\xEfok'
@@ -185,7 +185,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:24,column:0},end:{line:24,column:9},source:''},
-        value: 'preð',
+        value: 'pre@{xf0}@',
         raw: '"pre\\xF0"'
       },
       directive: 'pre\\xF0'
