--- a/tests/testcases/lexer_cases/strings_single/hex_escapes/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_single/hex_escapes/1.pass.md
@@ -116,7 +116,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:11,column:0},end:{line:11,column:6},source:''},
-        value: '',
+        value: '@{x9a}@',
         raw: "'\\x9a'"
       },
       directive: '\\x9a'
@@ -127,7 +127,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:13,column:0},end:{line:13,column:6},source:''},
-        value: '«',
+        value: '@{xab}@',
         raw: "'\\xAb'"
       },
       directive: '\\xAb'
@@ -138,7 +138,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:15,column:0},end:{line:15,column:6},source:''},
-        value: '¼',
+        value: '@{xbc}@',
         raw: "'\\xBc'"
       },
       directive: '\\xBc'
@@ -149,7 +149,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:17,column:0},end:{line:17,column:6},source:''},
-        value: 'Í',
+        value: '@{xcd}@',
         raw: "'\\xCd'"
       },
       directive: '\\xCd'
@@ -160,7 +160,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:19,column:0},end:{line:19,column:6},source:''},
-        value: 'Þ',
+        value: '@{xde}@',
         raw: "'\\xDe'"
       },
       directive: '\\xDe'
@@ -171,7 +171,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:21,column:0},end:{line:21,column:6},source:''},
-        value: 'ï',
+        value: '@{xef}@',
         raw: "'\\xEf'"
       },
       directive: '\\xEf'
@@ -182,7 +182,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:23,column:0},end:{line:23,column:6},source:''},
-        value: 'ð',
+        value: '@{xf0}@',
         raw: "'\\xF0'"
       },
       directive: '\\xF0'
