--- a/tests/testcases/lexer_cases/strings_single/octal_escapes/107.md
+++ b/tests/testcases/lexer_cases/strings_single/octal_escapes/107.md
@@ -70,7 +70,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:1,column:0},end:{line:1,column:6},source:''},
-        value: 'Ô',
+        value: '@{xd4}@',
         raw: "'\\324'"
       },
       directive: '\\324'
