--- a/tests/testcases/lexer_cases/strings_single/octal_escapes/114.md
+++ b/tests/testcases/lexer_cases/strings_single/octal_escapes/114.md
@@ -13,7 +13,7 @@
 ## Input
 
 `````js
-'\207	'
+'\207@{x9}@'
 `````
 
 ## Output
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 throws: Tokenizer error!
     Octal escapes are only allowed in sloppy mode with web compat enabled
 
-'\207	'
+'\207@{x9}@'
 ^------- error
 `````
 
@@ -44,7 +44,7 @@ Parsed with script goal but as if it was starting with `"use strict"` at the top
 throws: Tokenizer error!
     Illegal legacy octal escape in strict mode
 
-'\207	'
+'\207@{x9}@'
 ^------- error
 `````
 
@@ -70,7 +70,7 @@ ast: {
       expression: {
         type: 'Literal',
         loc:{start:{line:1,column:0},end:{line:1,column:7},source:''},
-        value: '\t',
+        value: '@{x87}@\t',
         raw: "'\\207\t'"
       },
       directive: '\\207\t'
