--- a/tests/testcases/lexer_cases/strings_template_head/hex_escapes/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_head/hex_escapes/1.pass.md
@@ -226,7 +226,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:1},end:{line:11,column:5},source:''},
             tail: false,
-            value: { raw: '\\x9a', cooked: '' }
+            value: { raw: '\\x9a', cooked: '@{x9a}@' }
           },
           {
             type: 'TemplateElement',
@@ -256,7 +256,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:13,column:1},end:{line:13,column:5},source:''},
             tail: false,
-            value: { raw: '\\xAb', cooked: '«' }
+            value: { raw: '\\xAb', cooked: '@{xab}@' }
           },
           {
             type: 'TemplateElement',
@@ -286,7 +286,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:15,column:1},end:{line:15,column:5},source:''},
             tail: false,
-            value: { raw: '\\xBc', cooked: '¼' }
+            value: { raw: '\\xBc', cooked: '@{xbc}@' }
           },
           {
             type: 'TemplateElement',
@@ -316,7 +316,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:17,column:1},end:{line:17,column:5},source:''},
             tail: false,
-            value: { raw: '\\xCd', cooked: 'Í' }
+            value: { raw: '\\xCd', cooked: '@{xcd}@' }
           },
           {
             type: 'TemplateElement',
@@ -346,7 +346,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:19,column:1},end:{line:19,column:5},source:''},
             tail: false,
-            value: { raw: '\\xDe', cooked: 'Þ' }
+            value: { raw: '\\xDe', cooked: '@{xde}@' }
           },
           {
             type: 'TemplateElement',
@@ -376,7 +376,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:21,column:1},end:{line:21,column:5},source:''},
             tail: false,
-            value: { raw: '\\xEf', cooked: 'ï' }
+            value: { raw: '\\xEf', cooked: '@{xef}@' }
           },
           {
             type: 'TemplateElement',
@@ -406,7 +406,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:23,column:1},end:{line:23,column:5},source:''},
             tail: false,
-            value: { raw: '\\xF0', cooked: 'ð' }
+            value: { raw: '\\xF0', cooked: '@{xf0}@' }
           },
           {
             type: 'TemplateElement',
