--- a/tests/testcases/lexer_cases/strings_template_static/hex_escapes/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_static/hex_escapes/1.pass.md
@@ -154,7 +154,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:1},end:{line:11,column:5},source:''},
             tail: true,
-            value: { raw: '\\x9a', cooked: '' }
+            value: { raw: '\\x9a', cooked: '@{x9a}@' }
           }
         ]
       }
@@ -171,7 +171,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:13,column:1},end:{line:13,column:5},source:''},
             tail: true,
-            value: { raw: '\\xAb', cooked: '«' }
+            value: { raw: '\\xAb', cooked: '@{xab}@' }
           }
         ]
       }
@@ -188,7 +188,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:15,column:1},end:{line:15,column:5},source:''},
             tail: true,
-            value: { raw: '\\xBc', cooked: '¼' }
+            value: { raw: '\\xBc', cooked: '@{xbc}@' }
           }
         ]
       }
@@ -205,7 +205,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:17,column:1},end:{line:17,column:5},source:''},
             tail: true,
-            value: { raw: '\\xCd', cooked: 'Í' }
+            value: { raw: '\\xCd', cooked: '@{xcd}@' }
           }
         ]
       }
@@ -222,7 +222,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:19,column:1},end:{line:19,column:5},source:''},
             tail: true,
-            value: { raw: '\\xDe', cooked: 'Þ' }
+            value: { raw: '\\xDe', cooked: '@{xde}@' }
           }
         ]
       }
@@ -239,7 +239,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:21,column:1},end:{line:21,column:5},source:''},
             tail: true,
-            value: { raw: '\\xEf', cooked: 'ï' }
+            value: { raw: '\\xEf', cooked: '@{xef}@' }
           }
         ]
       }
@@ -256,7 +256,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:23,column:1},end:{line:23,column:5},source:''},
             tail: true,
-            value: { raw: '\\xF0', cooked: 'ð' }
+            value: { raw: '\\xF0', cooked: '@{xf0}@' }
           }
         ]
       }
