--- a/tests/testcases/lexer_cases/strings_template_tail/hex_escapes/1.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_tail/hex_escapes/1.pass.md
@@ -232,7 +232,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:9},end:{line:11,column:13},source:''},
             tail: true,
-            value: { raw: '\\x9a', cooked: '' }
+            value: { raw: '\\x9a', cooked: '@{x9a}@' }
           }
         ]
       }
@@ -262,7 +262,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:13,column:9},end:{line:13,column:13},source:''},
             tail: true,
-            value: { raw: '\\xAb', cooked: '«' }
+            value: { raw: '\\xAb', cooked: '@{xab}@' }
           }
         ]
       }
@@ -292,7 +292,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:15,column:9},end:{line:15,column:13},source:''},
             tail: true,
-            value: { raw: '\\xBc', cooked: '¼' }
+            value: { raw: '\\xBc', cooked: '@{xbc}@' }
           }
         ]
       }
@@ -322,7 +322,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:17,column:9},end:{line:17,column:13},source:''},
             tail: true,
-            value: { raw: '\\xCd', cooked: 'Í' }
+            value: { raw: '\\xCd', cooked: '@{xcd}@' }
           }
         ]
       }
@@ -352,7 +352,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:19,column:9},end:{line:19,column:13},source:''},
             tail: true,
-            value: { raw: '\\xDe', cooked: 'Þ' }
+            value: { raw: '\\xDe', cooked: '@{xde}@' }
           }
         ]
       }
@@ -382,7 +382,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:21,column:9},end:{line:21,column:13},source:''},
             tail: true,
-            value: { raw: '\\xEf', cooked: 'ï' }
+            value: { raw: '\\xEf', cooked: '@{xef}@' }
           }
         ]
       }
@@ -412,7 +412,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:23,column:9},end:{line:23,column:13},source:''},
             tail: true,
-            value: { raw: '\\xF0', cooked: 'ð' }
+            value: { raw: '\\xF0', cooked: '@{xf0}@' }
           }
         ]
       }
