--- a/tests/testcases/lexer_cases/strings_template_tail/hex_escapes/2.pass.md
+++ b/tests/testcases/lexer_cases/strings_template_tail/hex_escapes/2.pass.md
@@ -28,7 +28,7 @@
 `${"-->"}\x9a\
 `
 ;
-`${"-->"}\xAb	`
+`${"-->"}\xAb@{x9}@`
 ;
 `${"-->"}\xBc `
 ;
@@ -233,7 +233,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:11,column:9},end:{line:12,column:0},source:''},
             tail: true,
-            value: { raw: '\\x9a\\\n', cooked: '' }
+            value: { raw: '\\x9a\\\n', cooked: '@{x9a}@' }
           }
         ]
       }
@@ -263,7 +263,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:14,column:9},end:{line:14,column:14},source:''},
             tail: true,
-            value: { raw: '\\xAb\t', cooked: '«\t' }
+            value: { raw: '\\xAb\t', cooked: '@{xab}@\t' }
           }
         ]
       }
@@ -293,7 +293,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:16,column:9},end:{line:16,column:14},source:''},
             tail: true,
-            value: { raw: '\\xBc ', cooked: '¼ ' }
+            value: { raw: '\\xBc ', cooked: '@{xbc}@ ' }
           }
         ]
       }
@@ -323,7 +323,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:18,column:9},end:{line:18,column:14},source:''},
             tail: true,
-            value: { raw: '\\xCd#', cooked: 'Í#' }
+            value: { raw: '\\xCd#', cooked: '@{xcd}@#' }
           }
         ]
       }
@@ -353,7 +353,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:20,column:9},end:{line:20,column:17},source:''},
             tail: true,
-            value: { raw: '\\xDe\\x00', cooked: 'Þ\u0000' }
+            value: { raw: '\\xDe\\x00', cooked: '@{xde}@\u0000' }
           }
         ]
       }
@@ -383,7 +383,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:22,column:9},end:{line:22,column:15},source:''},
             tail: true,
-            value: { raw: '\\xEfok', cooked: 'ïok' }
+            value: { raw: '\\xEfok', cooked: '@{xef}@ok' }
           }
         ]
       }
@@ -413,7 +413,7 @@ ast: {
             type: 'TemplateElement',
             loc:{start:{line:24,column:9},end:{line:24,column:16},source:''},
             tail: true,
-            value: { raw: 'pre\\xF0', cooked: 'preð' }
+            value: { raw: 'pre\\xF0', cooked: 'pre@{xf0}@' }
           }
         ]
       }
