--- a/tests/testcases/debugger_statement/regex_edge_cases/3.md
+++ b/tests/testcases/debugger_statement/regex_edge_cases/3.md
@@ -36,8 +36,7 @@ ast: {
   body: [
     {
       type: 'DebuggerStatement',
-      loc:{start:{line:1,column:0},end:{line:1,column:8},source:''},
-      argument: null
+      loc:{start:{line:1,column:0},end:{line:1,column:8},source:''}
     },
     {
       type: 'ExpressionStatement',
