Minor tests churn

--- a/tests/testcases/lexer_cases/regexesn/charclass_range_tests/10.md
+++ b/tests/testcases/lexer_cases/regexesn/charclass_range_tests/10.md
@@ -10,7 +10,9 @@
 >
 > Range poo to dizzy some are escapes and some are literal but surrogates should still work 
 >
-> Without u-flag the range is poo is ignored and the range is fine (xDCA9-xFFFD) 
+> Without u-flag the range is poo is ignored and the range is fine (xDCA9-xFFFD)
+>
+> This test will fail in a parser that supports surrogate pairs but fails to disable them without u-flag
 
 ## PASS
 
