--- a/tests/testcases/lexer_cases/regexesu/charclass_char_escapes_early_eof/111.md
+++ b/tests/testcases/lexer_cases/regexesu/charclass_char_escapes_early_eof/111.md
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Property escape \p must be followed by a curly bracket (and would be illegal without u-flag)
+    Regex: Early EOF while parsing regex property escape
 
 /[\P
 ^------- error
@@ -54,11 +54,4 @@ _Output same as sloppy mode._
 
 Parsed in sloppy script mode but with the web compat flag enabled.
 
-`````
-throws: Tokenizer error!
-    Regex: Property escape \p must be followed by a curly bracket (and would be illegal without u-flag); Unexpected early EOF while parsing character class
-
-/[\P
-^------- error
-`````
-
+_Output same as sloppy mode._
