--- a/tests/testcases/lexer_cases/identifiers/escape_unicode_quad/22.md
+++ b/tests/testcases/lexer_cases/identifiers/escape_unicode_quad/22.md
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Attempted to parse a unicode quad escape but at least one digit was not a hex; Found invalid quad unicode escape, the escape must be part of the ident so the ident is an error
+    At least one character of the unicode escape was not a valid hex (0-9a-f) character
 
 abc\uXvwxyz
 ^------- error
