--- a/tests/testcases/lexer_cases/identifiers/escape_unicode_variable/13.md
+++ b/tests/testcases/lexer_cases/identifiers/escape_unicode_variable/13.md
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Early EOF while parsing character class escape
+    Not enough characters left for a proper unicode escape
 
 abc\u007
 ^------- error
