--- a/tests/testcases/lexer_cases/identifiers/escape_unicode_variable/16.md
+++ b/tests/testcases/lexer_cases/identifiers/escape_unicode_variable/16.md
@@ -32,7 +32,7 @@ Parsed with script goal and as if the code did not start with strict mode header
 
 `````
 throws: Tokenizer error!
-    Regex: Early EOF while parsing character class escape
+    Reached end of input before closing the current ident escape
 
 abc\u
 ^------- error
